# BasicPlatform

./: CMakeLists.txt  Makefile  README.md  config.h  config.h.in
app/: CMakeLists.txt  main.c
configs/: log.conf
librarys/: CMakeLists.txt
librarys/osal/: CMakeLists.txt  assert.h
librarys/osal/include/: assert.h  atomic.h  kfifo.h  list.h  lock.h  log2.h  os.h  osal.h  osal_lock.h  osal_thread.h  osal_types.h  thread.h  types.h
librarys/osal/src/: kfifo.c  lock.c  osal_lock.c  osal_thread.c  thread.c
librarys/zlog/: CMakeLists.txt
librarys/zlog/include/: SysLogPublic.h
librarys/zlog/src/: conf.c  syslog.c
test/: CMakeLists.txt
test/kfifo/: CMakeLists.txt  bytestream-example.c  inttype-example.c  main.c  record-example.c
test/lock/: CMakeLists.txt  main.c
